version/0.17/_sources/api/solver/_autosummary/settings/turb_visc_func_mf.rst.txt
:orphan:

.. _turb_visc_func_mf:

turb_visc_func_mf
=================

.. autoclass:: ansys.fluent.core.solver.settings_232.turb_visc_func_mf.turb_visc_func_mf
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`turb_visc_func_mf_child <turb_visc_func_mf_child>`


.. rubric:: Included in:

====================================   =========================

Parent                                                   Summary

====================================   =========================
:ref:`user_defined <user_defined_2>`       'user_defined' child.

====================================   =========================

