version/0.20/_sources/api/solver/_autosummary/settings/turb_visc_func_mf.rst.txt
:orphan:

.. _turb_visc_func_mf:

turb_visc_func_mf
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.turb_visc_func_mf.turb_visc_func_mf
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`turb_visc_func_mf_child <turb_visc_func_mf_child>`


.. rubric:: Included in:

====================================   =========================

Parent                                                   Summary

====================================   =========================
:ref:`user_defined <user_defined_2>`       'user_defined' child.

====================================   =========================

